premiere implementation de l'application andrrorid: -création de classe, de pages xml, -ajout de photos -modification des activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".MainActivity3"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".Reservation"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
