--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.Gesttionreserv"
         tools:targetApi="31">
         <activity
+            android:name=".CreationCompteAdministrateur"
+            android:exported="false" />
+        <activity
+            android:name=".PageReservation"
+            android:exported="false" />
+        <activity
+            android:name=".PageTrajet"
+            android:exported="false" />
+        <activity
+            android:name=".CreationCompteChauffeur"
+            android:exported="false" />
+        <activity
             android:name=".CreationCompteClient"
             android:exported="false">
             <meta-data
