Création interfaces APi chauffeur, client et Admin Modification et corrections classes java et page xml Implémentation de la création d'un compte client = fonctionnel.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.doranco.gesttion_reserv">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gesttionreserv"
@@ -50,16 +56,16 @@
             android:name=".MainActivity5"
             android:exported="false" />
         <activity
-            android:name=".MainActivity4"
+            android:name=".CompteClient"
             android:exported="false" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".ListChauffeurReservation"
             android:exported="false" />
         <activity
             android:name="org.doranco.parcours.client.Reservation"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".PageConnexion"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
