- Enregistrement d'un client en base de données; - Création parcours client jusqu'à réservation et consultation des réservation -> Erreur quand click sur boutons; - Méthode Callback pour afficher des données depuis la base de données; - Création des pages java et xml Mon Compte - Paramètres : à remplir - Création des pages java et xml Mon Compte - Ma liste de réservation : à remplir - Amélioration de la page de connexion : ajout d'un bouton Sign up et d'un text view "Créer mon compte"; - Refacto du code par la création de méthodes dédiées pour les button click et l'enregistrement en base de données d'un client lors d'une création de compte.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.doranco.gesttion_reserv">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,11 +12,25 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gesttionreserv"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".MonCompteParametres"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MaListeDeReservations"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name="org.doranco.parcours.admin.CreationCompteChauffeurEtape2"
             android:exported="false">
