--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,87 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+          xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Gesttionreserv"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+            android:allowBackup="true"
+            android:dataExtractionRules="@xml/data_extraction_rules"
+            android:fullBackupContent="@xml/backup_rules"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.Gesttionreserv"
+            android:usesCleartextTraffic="true"
+            tools:targetApi="31">
         <activity
-            android:name=".MonCompteParametres"
-            android:exported="false">
+                android:name=".MonCompteAdmin"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value=""/>
         </activity>
         <activity
-            android:name=".MaListeDeReservations"
-            android:exported="false">
+                android:name=".MonCompteParametres"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value=""/>
         </activity>
         <activity
-            android:name="org.doranco.parcours.admin.CreationCompteChauffeurEtape2"
-            android:exported="false">
+                android:name=".MaListeDeReservations"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value=""/>
         </activity>
         <activity
-            android:name="org.doranco.parcours.client.CreationCompteClientEtape2"
-            android:exported="false">
+                android:name=".CreationCompteChauffeurEtape2"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value=""/>
         </activity>
         <activity
-            android:name="org.doranco.parcours.admin.CreationCompteAdministrateur"
-            android:exported="false" />
-        <activity
-            android:name=".PageReservation"
-            android:exported="false" />
-        <activity
-            android:name=".PageTrajet"
-            android:exported="false" />
-        <activity
-            android:name="org.doranco.parcours.admin.CreationCompteChauffeur"
-            android:exported="false" />
-        <activity
-            android:name="org.doranco.parcours.client.CreationCompteClient"
-            android:exported="false">
+                android:name="org.doranco.parcours.client.CreationCompteClientEtape2"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value=""/>
         </activity>
         <activity
-            android:name=".MainActivity5"
-            android:exported="false" />
+                android:name=".CreationCompteAdministrateur"
+                android:exported="false"/>
         <activity
-            android:name="org.doranco.parcours.client.CompteClient"
-            android:exported="false" />
+                android:name=".PageReservation"
+                android:exported="false"/>
         <activity
-            android:name=".ListChauffeurReservation"
-            android:exported="false" />
+                android:name=".PageTrajet"
+                android:exported="false"/>
         <activity
-            android:name="org.doranco.parcours.client.ChoisirChauffeur"
-            android:exported="false" />
+                android:name=".CreationCompteChauffeur"
+                android:exported="false"/>
         <activity
-            android:name=".PageConnexion"
-            android:exported="true">
+                android:name="org.doranco.parcours.client.CreationCompteClient"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
+                android:name=".MainActivity5"
+                android:exported="false"/>
+        <activity
+                android:name="org.doranco.parcours.client.CompteClient"
+                android:exported="false"/>
+        <activity
+                android:name=".ListChauffeurReservation"
+                android:exported="false"/>
+        <activity
+                android:name="org.doranco.parcours.client.ChoisirChauffeur"
+                android:exported="false"/>
+        <activity
+                android:name=".PageConnexion"
+                android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
