--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
+                android:name="org.doranco.parcours.chauffeurs.MonCompteChauffeur"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
                 android:name=".MonCompteAdmin"
                 android:exported="false">
             <meta-data
@@ -31,7 +38,7 @@
                     android:value=""/>
         </activity>
         <activity
-                android:name="org.doranco.parcours.chauffeurs.MaListeDeReservations"
+                android:name=".MaListeDeReservations"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
