feat(ViewHolder_demande_Reservation) - Création des affichages des listes de chauffeurs et de réservations concernant le parcours client et le parcours chauffeur; - Implémentation des services pour les requêtes; - Création d'une enum pour le statut de la resa; - Création de classes et de layout pour avancée sur les différents parcours; - Création de holderViews et d'Adapter pour ces derniers; - Création de la réservation pour les clients; - Création d'un getter de date et d'heure pour les pages d'accueil de compte;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,21 @@
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
-                android:name="org.doranco.parcours.chauffeurs.MonCompteChauffeur"
+                android:name=".VoirMaListeDeResa"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
+                android:name=".MaGestionDeDemandesDeResa"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
+                android:name=".MonCompteChauffeur"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
