Feat/affichage donnees listes (#5)
* feat(ViewHolder_demande_Reservation)
- Création du viewHolder pour la page demande de réservation, sur le parcours chauffeur.

* feat(ViewHolder_demande_Reservation)
- Création du viewHolderAdapter et du ViewHolder en java class.

* feat(ViewHolder_demande_Reservation)
- Création des affichages des listes de chauffeurs et de réservations concernant le parcours client et le parcours chauffeur;
- Implémentation des services pour les requêtes;
- Création d'une enum pour le statut de la resa;
- Création de classes et de layout pour avancée sur les différents parcours;
- Création de holderViews et d'Adapter pour ces derniers;
- Création de la réservation pour les clients;
- Création d'un getter de date et d'heure pour les pages d'accueil de compte;

* feat(Affichage_Listes_ViewHolders)
- Affichage de la liste dans la viewHolder chauffeur (ma réservation - parcours client);
- Utilisation des boutons dans la viewHolders liste chauffeurs (ma réservation - parcours client).

* feat(Parcours réservation fin)
-fin du parcours client réservation

* feat(Parcours Création compte chauffeur)
- Création d'un compte chauffeur via un compte admin = OK.

* feat(ViewHolders Listes)
- Correction bug et début affichage liste chauffeurs inscrits.

* feat(ViewHolders Listes)
- Liste chauffeurs inscrits dans mon compte admin;
- Début de 'voir ma liste de résa' pour parxours chauffeur;
- Ajout du login et de l'id dans l'enum 'ESharedDataRefs' pour les SharedPreferences;
- Enregistrement de l'id dans les SharedPreferences à la connexion;

* feat(ViewHolders Listes)
- Implémentation de la validation ou du refus des résas;
- Fin de 'voir ma liste de résa' pour parxours chauffeur;

* feat(ViewHolders Listes)
- Gestion de l'enregistrement d'un client quand le mot de passe et sa confirmation sont égaux et non null;

* feat(ViewHolders Listes)
- Gestion de l'affichage de la liste des réservations dans le compte client;


--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,34 @@
             android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
+                android:name="org.doranco.parcours.admin.ListeChauffeursInscrits"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
+                android:name="org.doranco.parcours.client.MonPaiement"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
+                android:name="org.doranco.parcours.chauffeurs.VoirMaListeDeResa"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
+                android:name="org.doranco.parcours.chauffeurs.MaGestionDeDemandesDeResa"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value=""/>
+        </activity>
+        <activity
                 android:name="org.doranco.parcours.chauffeurs.MonCompteChauffeur"
                 android:exported="false">
             <meta-data
@@ -24,7 +52,7 @@
                     android:value=""/>
         </activity>
         <activity
-                android:name=".MonCompteAdmin"
+                android:name="org.doranco.parcours.admin.MonCompteAdmin"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
@@ -38,14 +66,14 @@
                     android:value=""/>
         </activity>
         <activity
-                android:name=".MaListeDeReservations"
+                android:name="org.doranco.parcours.client.MaListeDeReservations"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
         <activity
-                android:name=".CreationCompteChauffeurEtape2"
+                android:name="org.doranco.parcours.admin.CreationCompteChauffeurEtape2"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
@@ -59,16 +87,13 @@
                     android:value=""/>
         </activity>
         <activity
-                android:name=".CreationCompteAdministrateur"
+                android:name="org.doranco.parcours.admin.CreationCompteAdministrateur"
                 android:exported="false"/>
         <activity
                 android:name="org.doranco.parcours.client.PageReservation"
                 android:exported="false"/>
         <activity
-                android:name="org.doranco.parcours.client.PageTrajet"
-                android:exported="false"/>
-        <activity
-                android:name=".CreationCompteChauffeur"
+                android:name="org.doranco.parcours.admin.CreationCompteChauffeur"
                 android:exported="false"/>
         <activity
                 android:name="org.doranco.parcours.client.CreationCompteClient"
